--- a/style.css
+++ b/style.css
@@ -1,220 +1,357 @@
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap');
+
 * {
-    font-family: 'Lato', sans-serif;
-    font-family: 'Open Sans', sans-serif;
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    max-width: 1440px;
+    margin: 0 auto;
     font-family: 'Work Sans', sans-serif;
 }
 
-.nav-section {
+/* common CSS */
+.webkit-text {
+    background: linear-gradient(180deg, #ff3ba0 0%, #8758F1 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+/* nav item */
+
+nav {
+    padding: 20px 100px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+
 }
 
 .logo {
+    display: flex;
+    align-items: center;
+}
+
+.logo h3 {
+    font-size: 2rem;
+    margin-left: 15px;
+}
+
+.logo-img {
+    height: 30px;
+}
+
+.nav-link ul {
+    display: flex;
+    align-items: center;
+}
+
+.nav-link li {
+    list-style: none;
+    margin-left: 20px;
+}
+
+.nav-link a {
+    font-weight: 500;
+}
+
+.nav-link a:hover {
+    color: #ff3ba0;
+    font-weight: 500;
+}
+
+.follow-button {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background-color: #E7E6E9;
+    padding: 10px 15px;
+    border-radius: 5px;
+}
+
+.follow-button img {
+    transform: scale(0.7);
+}
+
+/* banner section start hear */
+
+.banner-container {
+    background-image: url(../images/Group\ 14.png);
+    background-size: 52%;
+    background-repeat: no-repeat;
+}
+
+.top-banner,
+.top-banner-two {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 100px;
+
+}
+
+.banner-img {
+    width: 50%;
+}
+
+.banner-texts h3 {
+    font-size: 2.5rem;
+}
+
+.banner-texts h1 {
+    font-size: 5rem;
+    margin-bottom: 20px;
+}
+
+.banner-text-img {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.banner-text-img p {
+    font-size: 1rem;
+    color: #534C64;
+    text-align: center;
+    font-weight: 500;
+    text-transform: lowercase;
+}
+
+.banner-text-img {
+    margin: 10px 0px;
+}
+
+.banner-button {
+    margin-top: 30px;
+}
+
+.primary-button {
+    border: none;
+    background-color: #ff3ba0;
+    padding: 10px 20px;
+    border-radius: 40px;
+    font-size: 1.25rem;
+    color: white;
+    cursor: pointer;
+}
+
+.secondary-button {
+    background-color: #3bbef7;
+    margin-left: 10px;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 40px;
+    font-size: 1.25rem;
+    color: white;
+    cursor: pointer;
+}
+
+/* another section */
+.banner-container2 {
+    background-color: #FBF6FC;
+}
+
+.top-banner-two {
+    padding: 100px 0;
+}
+
+.banner-texts {
+    text-align: end;
+    width: 400px;
+
+}
+
+.banner-two-p {
+    color: #534C64;
+    text-align: right;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    /* 166.667% */
+}
+
+.banner-two-p2 {
+    font-size: 1.5rem;
+    margin: 20px 0;
+}
+
+
+main {
+    margin: 100px 100px;
+}
+
+/* <!-- Online Games Funny Videos===================== --> */
+.online-games-section {
+    text-align: center;
+}
+
+.online-games-section h3 {
+    font-size: 2.5rem;
+    margin-bottom: 10px;
+}
+
+.online-games-section p {
+    color: #534C64;
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+.game-card-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    margin-top: 50px;
+    text-align: start;
+}
+
+.card-img {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.game-img-contant {
+    position: relative;
+}
+
+.play-img {
+    position: absolute;
+    top: 40%;
+    left: 40%;
+}
+
+.watch-now {
+    position: absolute;
+    top: 56%;
+    left: 36%;
+    color: #ff3ba0;
+
+}
+
+.game-card:hover .card-img {
+    filter: brightness(45%);
+
+}
+
+.hide {
+    display: none;
+}
+
+.game-card:hover .hide {
+    display: block;
+
+}
+
+/* section-4 */
+
+.section4 {
+    margin: 100px 0 150px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.logo img {
-    width: 80px;
-    height: 40px;
+.section4-img-div {
+    width: 50%;
+    position: relative;
 }
 
-.nav-title {
-    color: rgb(255, 13, 194);
-    margin-left: 5px;
+.section4-text {
+    width: 300px;
+    margin: 0 auto;
 }
 
-.nav-title {
-    color: Linear;
-}
-
-.nav-text-item ul a {
-    margin-left: 32px;
-}
-
-ul a {
-    text-decoration: none;
-    color: #3C354F;
-    font-weight: 500;
-    font-size: 1.12rem;
-}
-
-.nav-btn {
-    cursor: pointer;
-    border-radius: 8px;
-    background: rgba(11, 2, 35, 0.10);
-    padding: 10px 20px;
-    border: none;
-}
-
-/* banner section start hear  */
-header {
-    height: 100vh;
-    background-size: cover;
-}
-
-.banner-container {
-    padding-left: 240px;
-    padding-right: 240px;
-}
-
-.banner-container {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    /* background-size: 100vh; */
-}
-
-.banner-text-content {
-    width: 901px;
-    height: 700px;
-    text-align: center;
-    padding-top: 148px;
-
-}
-
-.banner-text-content h4 {
-    color: #0B0223;
-    text-align: center;
-    font-size: 48px;
-    font-weight: 600;
-    text-transform: uppercase;
-    padding-bottom: 10px;
-    margin: 0px;
-    padding: 0px;
-    /* padding-top: 187px; */
-}
-
-.banner-text-content h1 {
-    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-align: center;
-    font-size: 95px;
-    font-weight: 800;
-    line-height: normal;
-    text-transform: uppercase;
-    margin: 0px 0px;
-    /* height: 578px;
-    width: 804px; */
-    /* padding: 0px; */
-    /* padding-bottom: 24px; */
-}
-
-.banner-text-content p {
+.section4-p {
     color: #534C64;
     text-align: left;
-    font-size: 1rem;
-    font-weight: 500;
-    /* padding-left: 140px; */
-    text-transform: lowercase;
-}
-
-.header-btn-section {
-    margin-right: 80px;
-}
-
-.first-btn {
-    border-radius: 48px;
-    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
-    padding: 10px 20px;
-    color: #FFF;
-    font-size: 1.25rem;
-    font-weight: 500;
-    text-transform: uppercase;
-    border: none;
-}
-
-.secound-btn {
-    border-radius: 48px;
-    background: #4EC5F7;
-    display: inline-flex;
-    padding: 10px 20px;
-    border: none;
-    align-items: flex-start;
-    gap: 10px;
-    color: #FFF;
-    font-size: 1.25rem;
-    font-weight: 500;
-    text-transform: uppercase;
-}
-
-.banner-img img {
-    height: 578px;
-    width: 680px;
-}
-
-/* banner section done hear  */
-.we-are-gamer-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.we-are-gamer-section h1 {
-    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    text-align: right;
-    font-size: 3rem;
-    font-weight: 700;
-}
-
-.we-are-gamer-section p {
-    width: 520px;
-    color: #534C64;
-    text-align: right;
-    font-size: 1.125rem;
+    font-size: 18px;
     font-weight: 400;
     line-height: 30px;
 }
 
-.gamer-btn {
-    display: inline-flex;
-    padding: 10px 20px;
-    align-items: flex-start;
-    gap: 10px;
-    border-radius: 48px;
-    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
-    color: #FFF;
-    /* text-align: right; */
-    font-size: 1rem;
+.section4-text h3 {
+    font-size: 2.5rem;
+    margin-bottom: 10px;
+}
+
+.main-img {
+    width: 100%;
+    margin-left: auto;
+}
+
+.sub-img {
+    transform: scale(0.7);
+    position: absolute;
+    top: 320px;
+    left: -150px;
+    /* border: 5px dotted #ff3ba0; */
+}
+
+/* section 5 start hear */
+.section5 {
+    display: flex;
+    margin: 100px 100px;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+
+}
+
+.section5-card {
+    display: flex;
+    align-items: center;
+    padding: 10px 15px;
+    border-radius: 50px;
     font-weight: 600;
-    text-transform: uppercase;
-    border: none;
 }
 
-.we-are-gamer-section .purpose {
-    color: #534C64;
-    text-align: right;
-    font-family: Work Sans;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 45px;
-    /* 187.5% */
+.section5-card img {
+    width: 50px;
+    margin-right: 10px;
 }
 
-.we-are-gamer-section .unleash {
-    color: #534C64;
-    font-family: Work Sans;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 45px;
+.section5-card:hover {
+    border: 1px solid #ff3ba0;
+    color: #ff3ba0;
 }
 
-.we-are-gamer-section {
-    color: #534C64;
-    font-family: Work Sans;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 45px;
+footer {
+    background-color: #0b0124;
+    color: white;
+    padding: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+}
+
+.footer-p {
+    display: flex;
+    gap: 30px;
+}
+.footer-p p{
+    font-size: 1.125rem;
+    border-bottom:1px dotted #3bbef7;
+}
+
+.footer-img {
+    display: flex;
+    gap: 25px;
+}
+.footer-img a img{
+    width: 30px;
+    height: 30px;
+}
+
+.footer-small small {
+    margin: 0 15px;
+    font-size: 0.7rem;
 }
