--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ nav {
     margin-left: 15px;
 }
 
-.logo-img {
+.logo img {
     height: 30px;
 }
 
@@ -114,18 +114,13 @@ nav {
     display: flex;
     align-items: center;
     gap: 10px;
+    margin: 10px 100px;
+    width: 80%;
 }
 
 .banner-text-img p {
-    font-size: 1rem;
-    color: #534C64;
-    text-align: center;
-    font-weight: 500;
-    text-transform: lowercase;
-}
-
-.banner-text-img {
-    margin: 10px 0px;
+    font-size: 1.15rem;
+    text-align: left;
 }
 
 .banner-button {
@@ -337,16 +332,18 @@ footer {
     display: flex;
     gap: 30px;
 }
-.footer-p p{
+
+.footer-p p {
     font-size: 1.125rem;
-    border-bottom:1px dotted #3bbef7;
+    border-bottom: 1px dotted #3bbef7;
 }
 
 .footer-img {
     display: flex;
     gap: 25px;
 }
-.footer-img a img{
+
+.footer-img a img {
     width: 30px;
     height: 30px;
 }
