--- a/style.css
+++ b/style.css
@@ -291,12 +291,13 @@ main {
 
 /* section 5 start hear */
 .section5 {
-    display: flex;
     margin: 100px 100px;
+    display: flex;
+    flex-wrap: wrap;
     gap: 20px;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
+    /* grid-template-columns: repeat(5, 2fr); */
 
 }
 
