--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ main {
     margin: 100px 100px;
 }
 
-/* <!-- Online Games Funny Videos===================== --> */
+/* online-games-section start hear*/
 .online-games-section {
     text-align: center;
 }
