--- a/responsibe.css
+++ b/responsibe.css
@@ -12,7 +12,8 @@
     .nav-link li{
         margin-top: 20px;
     }
-    .banner-container{
+    .banner-container,
+     .banner-container2{
         background-image:none;
         margin-bottom: 30px;
     }
