--- a/responsibe.css
+++ b/responsibe.css
@@ -1,5 +1,5 @@
 /* Phone view */
-@media screen and (max-width:600px){
+@media screen and (max-width:576px){
     nav{
         padding: 40px 20px;
         flex-direction: column; 
@@ -20,6 +20,9 @@
     .top-banner{
         flex-direction: column-reverse;
         margin: 0 20px;  
+    }
+    .top-banner-two{
+        flex-direction: column-reverse;
     }
     .banner-img{
         width: 100%;
@@ -109,7 +112,7 @@
 }
 
 /* Tablet view */
-@media screen and (min-width:600px) and (max-width:900px){
+@media screen and (min-width:576px) and (max-width:900px){
     nav{
         padding:10px 20px;
     }
